--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,11 @@ services:
     depends_on:
       - db
     environment:
-      - RAILS_ENV=${RAILS_ENV}
+      - RAILS_ENV=production
       - RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
       - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+    env_file:
+      - .env 
 
 volumes:
   postgres_data:
